syntax = "proto3";

package ProjectOrigin.Register.V1;

message FederatedStreamId {
    string Registry = 1;
    Uuid StreamId = 2;
}

message Uuid {
    string Value = 1;
}
